--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <main class="main">
       <img src="./assets/logo.png" alt="" />
       <div class="main-search">
-        <img class="main-search_icon" src="./assets/search.png" alt="" />
+        <img class="main-search__icon" src="./assets/search.png" alt="" />
         <input class="main-search__input" type="text" />
         <img
           class="main-search__icon main-search__voince"
