finished google clone

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                   tatianarodriguezpacheco@gmail.com
                 </p>
                 <input
-                  class="profile-header__input"
+                  class="profile-header__button"
                   type="text"
                   value="Gestionar tu cuenta de Google"
                 />
@@ -74,7 +74,23 @@
                 </div>
               </main>
               <footer class="profile-footer">
-                <div class="profile-footer__button"></div>
+                <div class="profile-footer__item">
+                  <input
+                    class="profile-footer__button"
+                    type="button"
+                    value="Salir de todas las cuentas"
+                  />
+                </div>
+                <div class="profile-footer__item">
+                  <ul class="profile-footer__list">
+                    <li>
+                      <a class="profile-footer__link">Política de privacidad</a>
+                    </li>
+                    <li>
+                      <a class="profile-footer__link"> Términos de servicio</a>
+                    </li>
+                  </ul>
+                </div>
               </footer>
             </div>
           </div>
@@ -106,14 +122,14 @@
       </div>
       <div class="main-languages">
         <p>Ofrecido por Google en:</p>
-        <a class="main-languages__link" href="">English Español</a>
-        <a class="main-languages__link" href="">(Latinoamérica)</a>
+        <a class="main-languages__link" href="">English</a>
+        <a class="main-languages__link" href="">Español (Latinoamérica)</a>
       </div>
     </main>
     <footer class="footer">
       <div class="footer__country"><p>Colombia</p></div>
       <div class="footer-links">
-        <ul>
+        <ul class="footer-links__list">
           <li class="footer-links__item"><a href="">Publicidad</a></li>
           <li class="footer-links__item"><a href="">Negocios</a></li>
           <li class="footer-links__item"><a href="">Sobre Google</a></li>
@@ -121,7 +137,7 @@
             <a href="">Cómo funciona la Búsqueda</a>
           </li>
         </ul>
-        <ul>
+        <ul class="footer-links__list">
           <li class="footer-links__item"><a href="">Privacidad</a></li>
           <li class="footer-links__item"><a href="">Condiciones</a></li>
           <li class="footer-links__item"><a href="">Preferencias</a></li>
