finished google clone

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </p>
                 <input
                   class="profile-header__button"
-                  type="text"
+                  type="button"
                   value="Gestionar tu cuenta de Google"
                 />
               </header>
